<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lk.idlsolutions.fan_tasticcompanion.MainActivity"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/linearLayout_Bluetooth_Connectivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/lbl_Bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/Bluetooth_lblText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lbl_BluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="Not Connected"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btn_BluetoothConnect"
            android:background="@color/colorRed"
            android:contentDescription="@string/Bluetooth_Connect_contentDesc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_LED_Control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_Bluetooth_Connectivity"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_LED_Control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LED_Control_lblTxt"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/btn_ToggleLED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Oscillation_Control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_LED_Control"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_Oscillation_Control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Oscillation_lblText"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/btn_ToggleOscillation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Auto_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_Oscillation_Control"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_Auto_Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AutoSwitch_lblText"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/btn_ToggleAutoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Temperature_Plans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_Auto_Switch"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_TemperaturePlans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_gravity="center_vertical"
            android:text="@string/Temperature_Plans_lblText"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btn_AddPlan"
            android:contentDescription="@string/AddPlan_imgBtnContentDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/btn_RemovePlan"
            android:contentDescription="@string/RemovePlan_imgBtnContentDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

</RelativeLayout>
